[project]
name = "asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pydub>=0.25.1",
    "pyperclip>=1.11.0",
    "readchar>=4.2.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]
